// Diary
"Add the first note in the \"New note\" section" = "Add the first note in the \"New note\" section";
"Diary" = "Diary";
"Delete" = "Delete";
"at %@" = "at %@";

// Detail note
"emotional state" = "emotional state";
"phyzical state" = "phyzical state";
"Note" = "Note";
"%@ at %@" = "%@ at %@";
"Note updated" = "Note updated";
"Mark" = "Mark";
"Comment" = "Comment";
"Tags" = "Tags";

// Default tags
"Leisure" = "Leisure";
"idleness" = "idleness";
"movie" = "movie";
"walk" = "walk";
"reading" = "reading";
"game" = "game";
"music" = "music";
"cleaning" = "cleaning";
"cooking" = "cooking";

"Emotions" = "Emotions";
"excitement" = "excitement";
"apathy" = "apathy";
"inspiration" = "inspiration";
"sadness" = "sadness";
"anxiety" = "anxiety";
"stress" = "stress";
"loneliness" = "loneliness";
"irritation" = "irritation";

"Sleep" = "Sleep";
"late rise" = "late rise";
"early rise" = "early rise";
"not enough sleep" = "not enough sleep";
"slept well" = "slept well";

"Food" = "Food";
"coffee" = "coffee";
"tea" = "tea";
"tasty food" = "tasty food";
"tasteless food" = "tasteless food";
"hunger" = "hunger";

"Health" = "Health";
"disease" = "disease";
"fatigue" = "fatigue";

// New note
"Search" = "Search";
"Search result" = "Search result";
"Ideas, thoughts, comments..." = "Ideas, thoughts, comments...";
"Cancel" = "Cancel";
"Save" = "Save";
"New note" = "New note";
"Delete note draft" = "Delete note draft";
"Note saved" = "Note saved";
"Date" = "Date";
"Mood" = "Mood";
"Comment" = "Comment";
"Physical" = "Physical";
"Emotional" = "Emotional";
"First note for today!" = "First note for today!";

// Statistics
"Statistics" = "Statistics";
"Day" = "Day";
"Week" = "Week";
"Month" = "Month";
"Year" = "Year";
"Select type" = "Select type";
"Select the type of average state to analyze" = "Select the type of average state to analyze";
"Average" = "Average";
"There is nothing to analyze yet. Add the first note about how you feel" = "There is nothing to analyze yet. Add the first note about how you feel";
"There are no notes in the specified time range. But we found a cat" = "There are no notes in the specified time range. But we found a cat";
"error" = "error";
"Emotional 💚" = "Emotional 💚";
"Physical ✊" = "Physical ✊";
"Emotional & physical 🌿" = "Emotional & physical 🌿";

// Tag editing
"Select a group" = "Select a group";
"Please add at least 1 tag" = "Please add at least 1 tag";
"Delete group" = "Delete group";
"Add a tag" = "Add a tag";
"Attention" = "Attention";
"Delete group?" = "Delete group?";
"Tag name" = "Tag name";
"Add" = "Add";
"Hide" = "Hide";
"Move to group" = "Move to group";
"Done" = "Done";
"Tag moved to «%d»" = "Tag moved to «%d»";
"Discard" = "Discard";
"Make active" = "Make active";
"Group deleted" = "Group deleted";
"Group name" = "Group name";
"Active" = "Active";
"Hidden" = "Hidden";
"Add new group" = "Add new group";
"Specify the name of the group" = "Specify the name of the group";
"Tag groups" = "Tag groups";
"Groups" = "Groups";

// Edit note
"Edit" = "Edit";
"Note deleted" = "Note deleted";

// More
"Sveti app version: %@ (%@)" = "Sveti app version: %@ (%@)";
"Info copied" = "Info copied";
"Icons by Icons8 💛" = "Icons by Icons8 💛";
"What's new & Roadmap" = "What's new & Roadmap";
"About" = "About";
"Contact us" = "Contact us";
"Share information about bugs or words of support" = "Share information about bugs or words of support";
"Sveti Feedback" = "Sveti Feedback";
"Sending an email is not supported. You need to set up mail" = "Sending an email is not supported. You need to set up mail";
"The email has been sent!" = "The email has been sent!";
"More" = "More";
"Features" = "Features";
"Other" = "Other";

// Onboarding Sveti
"What is Sveti?" = "What is Sveti?";
"Sveti is your well-being diary. Add entries, specify tags, and, of course, see statistics." = "Sveti is your well-being diary. Add entries, specify tags, and, of course, see statistics.";
"Why Sveti?" = "Why Sveti?";
"The main difference from other diaries is that you can track both your physical and emotional state." = "The main difference from other diaries is that you can track both your physical and emotional state.";
"Why track your mood?" = "Why track your mood?";
"Tracking your condition helps understand what exactly makes it worse or better." = "Tracking your condition helps understand what exactly makes it worse or better.";
"All information stored in Sveti is absolutely private" = "All information stored in Sveti is absolutely private";
"No one has access to your notes and statistics. Cloud saves are stored in Apple's private database linked to your iCloud account." = "No one has access to your notes and statistics. Cloud saves are stored in Apple's private database linked to your iCloud account.";
"Welcome to Sveti" = "Welcome to Sveti";

// Backup
"Can't find correct path to local data" = "Can't find correct path to local data";
"Unknown saving backup error" = "Unknown saving backup error";
"Didn't find local files to update backup" = "Didn't find local files to update backup";
"The data in the cloud no longer exists. Please refresh" = "The data in the cloud no longer exists. Please refresh";
"Unknown backup modification error" = "Unknown backup modification error";
"Can't find correct backup record in the cloud. Please refresh" = "Can't find correct backup record in the cloud. Please refresh";
"Can't find backup file in the cloud. Please refresh" = "Can't find backup file in the cloud. Please refresh";
"There are no correct backup files in the cloud. Please refresh" = "There are no correct backup files in the cloud. Please refresh";
"Unknown data recovery error" = "Unknown data recovery error";
"Cloud backup already doesn't exist. Please refresh" = "Cloud backup already doesn't exist. Please refresh";
"Unknown error during record deletion" = "Unknown error during record deletion";
"Can't find correct path to local data" = "Can't find correct path to local data";
"Backup file version is higher than the version of the files in the application. Please update the app" = "Backup file version is higher than the version of the files in the application. Please update the app";
"This action will replace all app content stored on the device" = "This action will replace all app content stored on the device";
"Cloud data will be deleted" = "Cloud data will be deleted";
"Updated" = "Updated";
"Success" = "Success";
"All data has been restored" = "All data has been restored";
"All data has saved in cloud" = "All data has saved in cloud";
"All data has been deleted" = "All data has been deleted";

// Backup cells & sections
"Save data to the cloud" = "Save data to the cloud";
"Restore data" = "Restore data";
"Delete cloud save" = "Delete cloud save";
"This action cannot be undone" = "This action cannot be undone";
"Danger zone" = "Danger zone";
"No internet access" = "No internet access";
"Please check your device settings" = "Please check your device settings";
"Need to log in to iCloud" = "Need to log in to iCloud";
"You can do this in the device settings" = "You can do this in the device settings";
"Cloud backup not found" = "Cloud backup not found";
"Create your first backup" = "Create your first backup";
"Last backup: %@, %@" = "Last backup: %@, %@";
"Actions" = "Actions";
"Backup & restore" = "Backup & restore";

// Tags
"Remove non-existent tags from note" = "Remove non-existent tags from note";
"Tags that no longer exist: " = "Tags that no longer exist: ";
"No tag groups exist" = "No tag groups exist";
"Please add your first tag group 🥺" = "Please add your first tag group 🥺";
"No groups found" = "No groups found";

// Stats
"Detail analysis" = "Detail analysis";
"No data found 😵‍💫" = "No data found 😵‍💫";
"N/A" = "N/A";
"Date:" = "Date:";
"Change:" = "Change:";
"Max:" = "Max:";
"Min:" = "Min:";
"Avg:" = "Avg:";
"Notes:" = "Notes:";
"Stability:" = "Stability:";
