...
class TagCell: Cell {
    private let containerView = UIView()
    private let tagsCollection = TagCollectionView()
    private let searchBar = UISearchBar()

    override func setLayout() {
        accessibilityIdentifier = "tag-cell"
        addSearchField()
        setContainerView()
        addTagCollectionView()
    }

    override func configureSelf(with viewModel: CellVM) {
...
